gccida/g1/gen_type_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11534:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11576:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11576:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // r15 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11582:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *j; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *vindex; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11693:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11772:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11787:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &size_unit->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11791:7: error: use of undeclared identifier 'p_int_cst'
low = p_int_cst->low; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11796:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11830:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11830:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11830:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11830:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11832:46: error: expected expression
while ( ( $A887AD9C3C6C8CC7716950D571F57C9D *)v86 != p_int_cst ); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11832:11: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
while ( ( $A887AD9C3C6C8CC7716950D571F57C9D *)v86 != p_int_cst ); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11832:47: error: expected ')'
while ( ( $A887AD9C3C6C8CC7716950D571F57C9D *)v86 != p_int_cst ); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/dwarf2out.c:11832:7: note: to match this '('
while ( ( $A887AD9C3C6C8CC7716950D571F57C9D *)v86 != p_int_cst ); 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_type_die/src/obj/dwarf2out.o] Error 1
